welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: not found: value nbPas
  nbPas=0
  ^Methods:5: error: not found: value nbPas
  nbPas=nbPas+1
  ^Methods:8: error: not found: value nbPas
  for(compteur <- 1 to nbPas) {
                       ^